--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -512,7 +512,7 @@ User configuration file.
 .SH "REPORTING BUGS"
 Report bugs to <ratpoison\-devel@lists.sourceforge.net>.
 .SH COPYRIGHT
-Copyright \(co 2000-2004 Shawn Betts
+Copyright \(co 2000, 2001, 2002, 2003, 2004 Shawn Betts
 .br 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.2 or
