--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -13,7 +13,7 @@
 @ifinfo
 This is the ratpoison user manual.
 
-Copyright @copyright{} 2000-2004 Shawn Betts
+Copyright @copyright{} 2000, 2001, 2002, 2003, 2004 Shawn Betts
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.2 or
@@ -45,7 +45,7 @@ Documentation License".
 
 @page
 @vskip 0pt plus 1filll
-Copyright @copyright{} 2000-2004 Shawn Betts
+Copyright @copyright{} 2000, 2001, 2002, 2003, 2004 Shawn Betts
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.2 or
