--- a/AUTHORS
+++ b/AUTHORS
@@ -32,3 +32,4 @@ Joshua Neuheisel <jneuheisel@msn.com>
 Sylvain BEUCLER <beuc@beuc.net>
 Cameron Patrick <cameron@patrick.wattle.id.au>
 Trent Buck <fubarbaz@bigpond.com>
+jesus c. meyendriesch <ratpoison-devel@haareambauch.de>
