--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-01-03  Ryan Yeske  <rcyeske@gmail.com>
+
+	* src/main.c (print_help): Update mailing list.
+
+	* src/actions.c (cmd_license): Update mailing list and website.
+
 2004-12-12  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/sbuf.c (sbuf_concat): call sbuf_nconcat. move bulk of body
