remove references to sourceforge

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -510,7 +510,7 @@ System-wide configuration file.
 .B $HOME/.ratpoisonrc
 User configuration file.
 .SH "REPORTING BUGS"
-Report bugs to <ratpoison\-devel@lists.sourceforge.net>.
+Report bugs to <ratpoison\-devel@nongnu.org>.
 .SH COPYRIGHT
 Copyright \(co 2000, 2001, 2002, 2003, 2004 Shawn Betts
 .br 
@@ -535,8 +535,8 @@ programs are properly installed at your site, the command
 .PP 
 should give you access to the complete manual.
 .SH AUTHOR
-Ratpoison was written by Shawn Betts <sabetts@users.sourceforge.net>.
+Ratpoison was written by Shawn Betts <sabetts@vcn.bc.ca>.
 
 This manual page was written by Gergely Nagy <8@free.bsd.hu> and
-updated by Shawn Betts <sabetts@users.sourceforge.net> and Doug
+updated by Shawn Betts <sabetts@vcn.bc.ca> and Doug
 Kearns <djkea2@mugca.cc.monash.edu.au>.
