--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,14 @@ are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.
 
 * Changes since 1.3.0
+** ratpoison -c prints errors to stderr
+You can now capture errors and output seperately depending on whether
+its printed to stderr or stdout.
+
+** the mouse warp feature is now turned off by default
+to turn it back on, run 'warp on'.
+
+* Changes since 1.3.0
 ** version now displays the date and time
 
 ** new command, sselect
