--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2005-01-15  Shawn Betts  <katia_dilkina@verizon.net>
+2005-01-15  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/actions.c (parse_args): remove erroneous pointer dereference
 	of i when gobbling whitespace.
@@ -10,7 +10,7 @@
 	NULL.
 	(cmd_set): call the set function if the arg list size is 0.
 
-2005-01-14  Shawn Betts  <katia_dilkina@verizon.net>
+2005-01-14  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/main.c (init_defaults): turn off warp by default.
 
