--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-15  Ryan Yeske  <rcyeske@gmail.com>
+
+	* src/editor.c (saved_command): Only define whe HAVE_HISTORY is
+	defined.
+
 2005-01-15  Shawn Betts  <katia_dilkina@verizon.net>
 
 	* src/globals.h (RET_SUCCESS): set to 1
