*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2005-01-15  Shawn Betts  <katia_dilkina@verizon.net>
+2005-01-15  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* src/actions.c (init_user_commands): change select's argument to
 	arg_REST.
