--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@ are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.
 
 * Changes since 1.3.0
+** command arguments can be wrapped in double quotes.
+To include a space in a command argument, wrap the argument with ".
+
 ** New command undefinekey
 not passing a 3rd argument to definekey and bind no longer unbind the
 key. You must use undefinekey and unbind now.
