(main): Report extra unparsed arguments.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-01-15  Shawn Betts  <katia_dilkina@verizon.net>
 
+	* src/main.c (main): Report extra unparsed arguments.
+
 	* src/actions.c (init_user_commands): set the last argument of the
 	following commands to arg_REST: addhook, chdir, remhook, source,
 	tmpwm, and prompt.
