* actions.c (cmd_focusleft,cmd_focusright,cmd_focusup,cmd_focusdown): show 	currectframe if movement not possible.

--- a/AUTHORS
+++ b/AUTHORS
@@ -33,3 +33,4 @@ Sylvain BEUCLER <beuc@beuc.net>
 Cameron Patrick <cameron@patrick.wattle.id.au>
 Trent Buck <fubarbaz@bigpond.com>
 jesus c. meyendriesch <ratpoison-devel@haareambauch.de>
+Bernhard R. Link <brlink@debian.org>
