--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-19  Shawn Betts  <katia_dilkina@verizon.net>
+
+	* contrib/genrpbindings: add python bindings.
+
 2005-01-17  Shawn Betts  <katia_dilkina@verizon.net>
 
 	* src/frame.c (frame_read): remove space in "(frame " string.
